--- a/css/store.css
+++ b/css/store.css
@@ -1917,29 +1917,38 @@ section#main-body {
 .landing-page.sitebuilder .tagline {
     text-align: center;
 }
-.landing-page.sitebuilder .features .nav-tabs > li {
+.landing-page.sitebuilder .nav-tabs > li {
     float: none;
     display: inline-block;
     zoom: 1;
 }
-.landing-page.sitebuilder .features .nav-tabs {
+.landing-page.sitebuilder .nav-tabs {
     text-align: center;
 }
-.landing-page.sitebuilder .features .nav-tabs > li > a {
+.landing-page.sitebuilder .nav-tabs > li > a {
+    padding: 10px 30px;
     text-transform: uppercase;
-    background: transparent;
+    background: #f6f6f6;
     border: 0;
     color: #333;
     font-weight: bold;
     font-size: 1.1em;
+    border-radius: 10px;
 }
-.landing-page.sitebuilder .features .nav-tabs a.active,
-.landing-page.sitebuilder .features .nav-tabs a.active:focus,
-.landing-page.sitebuilder .features .nav-tabs a.active:hover {
+.landing-page.sitebuilder .nav-tabs a.active,
+.landing-page.sitebuilder .nav-tabs a.active:focus,
+.landing-page.sitebuilder .nav-tabs a.active:hover {
     border: 0;
     color: #ff3377;
+    background: #ddd;
 }
-.landing-page.sitebuilder .features .tab-content {
+.landing-page.sitebuilder .carousel-indicators li {
+    background-color: #aaa;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+.landing-page.sitebuilder .tab-content {
     background-color: transparent;
 }
 .landing-page.sitebuilder .features img {
@@ -1969,7 +1978,8 @@ section#main-body {
 .landing-page.sitebuilder .templates .previews {
     padding: 50px 0;
 }
-.landing-page.sitebuilder .templates .previews img {
+.landing-page.sitebuilder .templates .previews img,
+.landing-page.sitebuilder .templates .previews .show-more div {
     width: 100%;
     height: 200px;
     object-fit: cover;
@@ -1977,14 +1987,55 @@ section#main-body {
     border: 1px solid #ddd;
 }
 @media (max-width: 767px) {
-    .landing-page.sitebuilder .templates .previews img {
+    .landing-page.sitebuilder .templates .previews img,
+    .landing-page.sitebuilder .templates .previews .show-more div {
         height: 300px;
     }
+}
+.landing-page.sitebuilder .templates .previews .show-more div {
+    font-size: 3em;
+    text-align: center;
+    line-height: 200px;
+}
+.landing-page.sitebuilder .templates .previews .show-more div .icon-wrapper {
+    display: inline-block;
+    width: 100px;
+    line-height: 100px;
+    background-color: #ccc;
+    color: #fff;
+    border-radius: 50%;
+}
+.landing-page.sitebuilder .templates .previews .thumb-wrapper {
+    position: relative;
+    overflow: hidden;
+}
+.landing-page.sitebuilder .templates .previews .thumb-wrapper .type-label {
+    position: absolute;
+    top: 11px;
+    right: -31px;
+    background-color: #333;
+    color: #fff;
+    font-size: 13px;
+    padding: 3px;
+    transform: rotate(30deg);
+    width: 145px;
+    text-align: center;
+    border: 1px solid #fff;
+}
+.landing-page.sitebuilder .templates .previews .type-single .type-label {
+    background-color: #bbb;
+}
+.landing-page.sitebuilder .templates .previews .type-ecom .type-label {
+    background-color: #1b9636;
 }
 .landing-page.sitebuilder .templates .previews .tplname {
     display: block;
     padding: 10px 0 20px;
-    font-size: 1.2em;
+    color: #777;
+    text-align: center;
+}
+.landing-page.sitebuilder .templates .previews a:hover .tplname {
+    color: #444;
 }
 .landing-page.sitebuilder .pricing {
     padding: 70px 0;
@@ -2108,6 +2159,12 @@ section#main-body {
     vertical-align: baseline;
     margin-bottom: -2px;
 }
+.wp-toolkit .hero-cta .logo-plesk {
+    margin-left: 10px;
+    max-height: 45px;
+    vertical-align: middle;
+    margin-bottom: -2px;
+}
 .wp-toolkit .btn-cta {
     margin-top: 25px;
     padding: 15px 75px;
@@ -2143,6 +2200,9 @@ section#main-body {
     margin: 25px 0 0;
     padding: 25px 0;
 }
+.wp-toolkit .features .smart-updates {
+    margin: 25px 0 50px;
+}
 .wp-toolkit .features h3 {
     font-size: 1.6em;
     font-weight: bold;
@@ -2159,6 +2219,29 @@ section#main-body {
     padding: 30px 0;
     font-size: 1.3em;
     color: #043855;
+}
+.wp-toolkit .lightbox-modal .close {
+    position: absolute;
+    right: 0px;
+    bottom: -30px;
+    z-index: 999;
+    font-size: 2em;
+    font-weight: normal;
+    color: #fff;
+    opacity: 1;
+}
+.wp-toolkit .lightbox-modal .lightbox-image {
+    min-height: 200px;
+    max-width: 100%;
+    height: auto;
+}
+.wp-toolkit .lightbox-modal .modal-body {
+    position: relative;
+    padding: 0px;
+    background: #ccc;
+}
+.wp-toolkit .lightbox-modal .modal-dialog {
+    margin: 30px auto;
 }
 .wp-toolkit .pre-screenshots {
     margin: 0;
@@ -2206,7 +2289,7 @@ section#main-body {
     display: block;
 }
 .wp-toolkit .screenshots img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
 .wp-toolkit .pricing {
@@ -2368,12 +2451,18 @@ section#main-body {
     .wp-toolkit .hero-cta h2 {
         font-size: 2em;
     }
+    .wp-toolkit .hero-cta .logo-plesk {
+        max-height: 65px;
+    }
     .wp-toolkit .body-intro {
         padding: 50px 0 75px;
     }
     .wp-toolkit .features {
         margin: 50px 0;
         padding: 50px 0;
+    }
+    .wp-toolkit .features .smart-updates {
+        margin: 50px 0 100px;
     }
     .wp-toolkit .features h3 {
         font-size: 2.4em;
